Use Unsafe to set final static fields