@@ -1,12 +1,34 @@
 package com.meterware.simplestub;
 
+import sun.misc.Unsafe;
+
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
+import java.security.AccessController;
+import java.security.PrivilegedAction;
 
 /**
  * A class which simplifies the assignment of stubs to static variables.
  */
 abstract public class StaticStubSupport {
+
+    /** Gain access to define class method. */
+    private final static Unsafe unsafe = AccessController.doPrivileged(
+                    new PrivilegedAction<Unsafe>() {
+                        public Unsafe run() {
+                            //noinspection Duplicates
+                            try {
+                                Field field = Unsafe.class.getDeclaredField("theUnsafe");
+                                field.setAccessible(true);
+                                return (Unsafe) field.get(null);
+                            } catch (NoSuchFieldException exc) {
+                                throw new Error("Could not access Unsafe", exc);
+                            } catch (IllegalAccessException exc) {
+                                throw new Error("Could not access Unsafe", exc);
+                            }
+                        }
+                    }
+            );
 
     /**
      * This method assigns the specified value to the named field in the specified class. It returns a
@@ -34,6 +56,7 @@ abstract public class StaticStubSupport {
      * @return an object which holds the information needed to revert the static field.
      * @throws NoSuchFieldException if the named field does not exist.
      */
+    @SuppressWarnings("WeakerAccess")
     public static Memento preserve(Class<?> containingClass, String fieldName) throws NoSuchFieldException {
         return new StaticMemento(containingClass, fieldName);
     }
@@ -43,10 +66,6 @@ abstract public class StaticStubSupport {
 
 
     private static class StaticMemento implements Memento {
-
-        private static final String JIGSAW_INACCESSIBLE_OBJECT_EXCEPTION_NAME = "java.lang.reflect.InaccessibleObjectException";
-        private static final String JIGSAW_INACCESSIBLE_OBJECT_MESSAGE = "Unable to modify final field %s in class %s.%n" +
-                "The module system forbids removing the final qualifier unless the JVM is started with --add-exports-private=java.base/java.lang.reflect=ALL-UNNAMED";
 
         private Class<?> containingClass;
         private String fieldName;
@@ -96,8 +115,7 @@ abstract public class StaticStubSupport {
 
         private void setPrivateStaticField(Class aClass, String fieldName, Object value) throws NoSuchFieldException, IllegalAccessException {
             try {
-                Field field = getAccessibleField(aClass, fieldName);
-                field.set(null, value);
+                setAccessibleField( aClass, fieldName, value );
             } catch (NoSuchFieldException e) {
                 if (aClass.getSuperclass() == null)
                     throw e;
@@ -106,6 +124,39 @@ abstract public class StaticStubSupport {
             }
         }
 
+
+        private void setAccessibleField(Class aClass, String fieldName, Object value) throws NoSuchFieldException, IllegalAccessException {
+            Field field = getAccessibleField(aClass, fieldName);
+            if (!isFinal(field))
+                setFieldValue(value, field);
+            else if (!field.getType().isPrimitive())
+                unsafe.putObject(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
+            else if (field.getType().equals(boolean.class) && value instanceof Boolean)
+                unsafe.putBoolean(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), (Boolean) value);
+            else if (field.getType().equals(char.class) && value instanceof Character)
+                unsafe.putChar(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Character) value));
+            else if (field.getType().equals(byte.class) && value instanceof Number)
+                unsafe.putByte(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).byteValue());
+            else if (field.getType().equals(short.class) && value instanceof Number)
+                unsafe.putShort(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).shortValue());
+            else if (field.getType().equals(int.class) && value instanceof Number)
+                unsafe.putInt(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).intValue());
+            else if (field.getType().equals(long.class) && value instanceof Number)
+                unsafe.putLong(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).longValue());
+            else if (field.getType().equals(float.class) && value instanceof Number)
+                unsafe.putFloat(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).floatValue());
+            else if (field.getType().equals(double.class) && value instanceof Number)
+                unsafe.putDouble(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).doubleValue());
+            else
+                throw new IllegalArgumentException(String.format("Can not set final static %s field %s.%s to %s", field.getType(), aClass.getName(), fieldName, value.getClass().getName()));
+        }
+
+
+        private void setFieldValue(Object value, Field field) throws IllegalAccessException {
+            field.set(null, value);
+        }
+
+
         /**
          * Returns the specified field, ensuring that the code can access it. Note that this will not work
          * with fields representing primitives or Strings, as the compiler may optimize them.
@@ -113,24 +164,11 @@ abstract public class StaticStubSupport {
         private Field getAccessibleField(Class aClass, String fieldName) throws NoSuchFieldException, IllegalAccessException {
             Field field = aClass.getDeclaredField(fieldName);
             field.setAccessible(true);
-            if (isFinal(field)) removeFinalModifier(field);
             return field;
         }
 
         private boolean isFinal(Field field) {
             return (field.getModifiers() & Modifier.FINAL) == Modifier.FINAL;
-        }
-
-        private void removeFinalModifier(Field field) throws NoSuchFieldException, IllegalAccessException {
-            try {
-                Field modifiers = Field.class.getDeclaredField("modifiers");
-                modifiers.setAccessible(true);
-                modifiers.setInt(field, field.getModifiers() & ~Modifier.FINAL);
-            } catch (RuntimeException e) {
-                if (e.getClass().getName().equals(JIGSAW_INACCESSIBLE_OBJECT_EXCEPTION_NAME))
-                    throw new SimpleStubException(String.format(JIGSAW_INACCESSIBLE_OBJECT_MESSAGE, field.getName(), field.getDeclaringClass().getName()));
-                throw e;
-            }
         }
 
         private Object getPrivateStaticField(Class aClass, String fieldName) throws NoSuchFieldException, IllegalAccessException {
